--- a/public/css/shared/_footer.scss
+++ b/public/css/shared/_footer.scss
@@ -11,8 +11,7 @@
     position: relative;
     justify-content: space-between;
     top: 50px;
-    width: 68%;
-    position: relative;
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
     height: 75%;
