--- a/public/css/shared/_header.scss
+++ b/public/css/shared/_header.scss
@@ -328,6 +328,9 @@
   top: 141px;
   z-index: 4;
   transition: all 0.5s ease;
+  box-shadow: 0px 12px 24px -5px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0px 12px 24px -5px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 12px 24px -5px rgba(0, 0, 0, 0.15);
   ul {
     display: flex;
     text-align: center;
