--- a/public/css/style.css
+++ b/public/css/style.css
@@ -328,6 +328,9 @@
   top: 141px;
   z-index: 4;
   transition: all 0.5s ease;
+  box-shadow: 0px 12px 24px -5px rgba(0, 0, 0, 0.15);
+  -webkit-box-shadow: 0px 12px 24px -5px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0px 12px 24px -5px rgba(0, 0, 0, 0.15);
 }
 .menuCache_howCanWeHelp ul {
   display: flex;
@@ -447,8 +450,7 @@
   position: relative;
   justify-content: space-between;
   top: 50px;
-  width: 68%;
-  position: relative;
+  max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
   height: 75%;
@@ -608,7 +610,7 @@
   font-weight: 600;
 }
 .menuFixed li a:hover {
-  color: #8cdb1f;
+  color: #8cdb1f !important;
 }
 
 /********************************* TEXT 1 **************************/
@@ -1160,7 +1162,6 @@
 .bgGris_listCards {
   display: flex;
   position: relative;
-  justify-content: space-between;
   flex-wrap: wrap;
   margin-left: 15%;
   margin-right: 15%;
@@ -1173,6 +1174,7 @@
   -webkit-box-shadow: 0px 0px 39px 0px rgba(110, 110, 110, 0.37);
   box-shadow: 0px 0px 39px 0px rgba(110, 110, 110, 0.37);
   margin-bottom: 20px;
+  margin: 0px 10px 0px 10px;
 }
 .bgGris_listCards .card .titre {
   padding-top: 30px;
@@ -1244,7 +1246,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 55%;
+  max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
   min-height: 500px;
@@ -1346,15 +1348,22 @@
 }
 .video .containerVideo {
   position: relative;
-  left: 24%;
-  top: 25%;
-  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  max-width: 1150px;
   color: white;
 }
-.video .containerVideo span {
+.video .containerVideo .videoCard {
+  position: relative;
+  padding-top: 100px;
+  padding-left: 50px;
+  max-width: 600px;
+}
+.video .containerVideo .videoCard span {
   color: #6ba717;
 }
-.video .containerVideo h2 {
+.video .containerVideo .videoCard h2 {
   margin-bottom: 15px;
   margin-top: 5px;
   width: 500px;
@@ -1365,12 +1374,12 @@
   line-height: 70px;
   color: white;
 }
-.video .containerVideo .containerVideo_Text {
+.video .containerVideo .videoCard .containerVideo_Text {
   color: #bec5c9;
   width: 60%;
   line-height: 25px;
 }
-.video .containerVideo input {
+.video .containerVideo .videoCard input {
   margin-top: 20px;
   border-radius: 30px;
   height: 55px;
@@ -1380,7 +1389,7 @@
   cursor: pointer;
   transition: all 1s ease;
 }
-.video .containerVideo input:hover {
+.video .containerVideo .videoCard input:hover {
   background-color: #7ac512;
 }
 
@@ -1394,7 +1403,7 @@
   align-items: center;
 }
 .ourMission .ourMission_L {
-  width: 22%;
+  max-width: 500px;
   color: #005052;
   font-weight: 600;
   margin-right: 50px;
@@ -1424,13 +1433,16 @@
   background-color: #7ac512;
 }
 .ourMission .ourMission_R {
-  width: 30%;
+  max-width: 750px;
+  max-height: 100%;
   color: #4c5f6a;
+  padding-left: 50px;
 }
 .ourMission .ourMission_R p {
   font-size: 16px;
   line-height: 30px;
   font-weight: 300;
+  max-height: 400px;
 }
 
 /****************************************/
@@ -1448,7 +1460,7 @@
 .numberBot .numberBot_Card {
   position: relative;
   display: block;
-  margin: 0 20px 0 20px;
+  margin: 0 30px 0 30px;
   top: 30%;
 }
 .numberBot .numberBot_Card p {
@@ -1515,6 +1527,10 @@ input {
   color: white;
   font-size: 17px;
   font-weight: 600;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 /*# sourceMappingURL=style.css.map */
