--- a/public/css/shared/_footer.scss
+++ b/public/css/shared/_footer.scss
@@ -1,7 +1,8 @@
 .footer {
   position: relative;
   background-color: $vertFonce;
-  height: 450px;
+  min-height: 450px;
+  padding-bottom: 20px;
   color: white;
   a {
     color: white;
@@ -10,10 +11,12 @@
     display: flex;
     position: relative;
     justify-content: space-between;
+    flex-wrap: nowrap;
     top: 50px;
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 50px;
     height: 75%;
     .footerContaint_Card {
       width: 30%;
@@ -81,13 +84,22 @@
   justify-content: space-between;
   margin-left: auto;
   margin-right: auto;
-  width: 68%;
+  max-width: 1200px;
 
-  margin-top: 40px;
+  margin-top: 100px;
   flex-wrap: nowrap;
+  @media all and (max-width: 770px) {
+    flex-wrap: wrap;
+    flex-direction: column;
+    height: 80px;
+    margin-top: 80px;
+  }
   .by {
     font-weight: 600;
     min-width: 350px;
+    @media all and (max-width: 770px) {
+      order: 1;
+    }
   }
 
   .line {
@@ -95,11 +107,17 @@
     border-top: 1px solid #0b7779;
     width: 55%;
     max-width: 55%;
+    @media all and (max-width: 770px) {
+      order: -1;
+    }
   }
   .btnSocial {
     display: inline-block;
     min-width: 145px;
     margin-left: 5px;
+    @media all and (max-width: 770px) {
+      order: -2;
+    }
   }
   .twitter,
   .vimeo,
