--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -4,6 +4,7 @@
 @import "./shared/header";
 @import "./shared/footer";
 @import "./mission";
+@import "./pharmaceutical";
 @import "./main";
 
 @font-face {
