--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1036,6 +1036,154 @@
   text-decoration: underline;
 }
 
+.mainHeaderPharma {
+  height: 560px;
+  border: 1px solid red;
+  background: url(../images/slides/woman-web_crop-min.jpg) no-repeat;
+  background-size: 175%;
+  background-position: right 35% bottom 82%;
+  filter: brightness(0.75);
+}
+.mainHeaderPharma .mainHeaderPharma_contain {
+  display: block;
+  position: relative;
+  margin-top: 16%;
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
+  text-align: center;
+  color: white;
+}
+.mainHeaderPharma .mainHeaderPharma_contain span {
+  display: block;
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 8px;
+  line-height: 19.6px;
+  font-family: GothamBook;
+  margin: 0 0 12px 0;
+}
+.mainHeaderPharma .mainHeaderPharma_contain h3 {
+  font-size: 80px;
+  line-height: 70px;
+  font-family: League;
+  font-weight: 400;
+}
+
+.mainContent {
+  display: flex;
+  max-width: 1250px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 20px;
+  justify-content: space-between;
+}
+.mainContent .containL {
+  margin-left: 20px;
+  width: 835px;
+  margin-right: 50px;
+}
+.mainContent .containL h2 {
+  font-family: GothamMedium;
+  font-size: 23px;
+  font-weight: 700;
+  letter-spacing: -0.345px;
+  line-height: 36px;
+}
+.mainContent .containL p {
+  font-family: GothamBook;
+  font-size: 16px;
+  letter-spacing: -0.256px;
+  line-height: 30px;
+  color: #4c5f6a;
+}
+.mainContent .containL .finContent {
+  font-family: GothamBook;
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: -0.256px;
+  line-height: 30px;
+  color: #4c5f6a;
+  margin-bottom: 25px;
+}
+.mainContent .containL .title {
+  font-family: League;
+  font-size: 40px;
+  line-height: 40px;
+  font-weight: 400;
+  font-size: 30px;
+  color: #005052;
+}
+.mainContent .containL ul {
+  margin-bottom: 25px;
+}
+.mainContent .containL li {
+  list-style-type: circle;
+  margin: 10px 0 10px 20px;
+}
+.mainContent .containL li a {
+  font-family: GothamBold;
+  font-size: 16px;
+  font-weight: 700;
+  letter-spacing: -0.4px;
+  line-height: 19px;
+}
+.mainContent .containL li a::after {
+  content: "→";
+  color: #8cdb1f;
+  margin-left: 3px;
+  display: inline-block;
+  width: 0;
+}
+.mainContent .containL li a:hover {
+  text-decoration: underline;
+}
+.mainContent .containR {
+  width: 420px;
+  background-color: #f5f5f5;
+  max-height: 875px;
+  margin-right: 20px;
+}
+.mainContent .containR h4 {
+  border-bottom: 1px solid #d6d6d6;
+  font-size: 20px;
+  margin: 30px 0 0 0;
+  padding-left: 60px;
+  padding-bottom: 35px;
+}
+.mainContent .containR span {
+  display: block;
+  margin-bottom: 25px;
+  font-size: 12px;
+  color: #8b8b8b;
+}
+.mainContent .containR form {
+  padding: 30px;
+}
+.mainContent .containR .formInput {
+  display: block;
+  width: 100%;
+  border: 1px solid #d6d6d6;
+  border-radius: 50px;
+  height: 50px;
+  margin-bottom: 15px;
+}
+.mainContent .containR .btnSubmit {
+  text-align: center;
+  border-radius: 30px;
+  background-color: #8cdb1f;
+  cursor: pointer;
+  transition: all 1s ease;
+  margin-top: 25px;
+  margin-left: auto;
+  margin-right: auto;
+  height: 50px;
+  width: 100%;
+}
+.mainContent .containR .btnSubmit:hover {
+  background-color: #7ac512;
+}
+
 /****************************************/
 .container {
   position: relative;
