--- a/public/css/_pharmaceutical.scss
+++ b/public/css/_pharmaceutical.scss
@@ -33,15 +33,18 @@
 
 .mainContent {
   display: flex;
-  max-width: 1250px;
+  max-width: 1350px;
   margin-right: auto;
   margin-left: auto;
-  margin-top: 20px;
+  margin-top: 30px;
   justify-content: space-between;
+
   .containL {
     margin-left: 20px;
     width: 835px;
     margin-right: 50px;
+    border-bottom: 1px solid #d3d3d3;
+    margin-bottom: 40px;
     h2 {
       font-family: GothamMedium;
       font-size: 23px;
@@ -101,18 +104,30 @@
     background-color: #f5f5f5;
     max-height: 875px;
     margin-right: 20px;
-    h4 {
+    .titleGetInTouch {
+      display: flex;
+      flex-wrap: nowrap;
+      align-items: center;
       border-bottom: 1px solid #d6d6d6;
-      font-size: 20px;
-      margin: 30px 0 0 0;
-      padding-left: 60px;
-      padding-bottom: 35px;
+      margin: 25px 0 0 0;
+      padding-left: 25px;
+      padding-bottom: 25px;
     }
-    span {
+    .letter {
+      display: inline-block;
+      background: url(../images/letter.JPG) no-repeat center/cover;
+      height: 40px;
+      width: 40px;
+    }
+    h4 {
+      font-size: 20px;
+      margin-left: 10px;
+    }
+    .lib {
       display: block;
-      margin-bottom: 25px;
       font-size: 12px;
       color: #8b8b8b;
+      margin-bottom: 15px;
     }
     form {
       padding: 30px;
@@ -124,6 +139,20 @@
       border-radius: 50px;
       height: 50px;
       margin-bottom: 15px;
+      color: black;
+      padding: 15px 15px 15px 25px;
+      font-size: 14px;
+      font-weight: normal;
+    }
+
+    textarea {
+      max-width: 100%;
+      min-width: 100%;
+      max-height: 125px;
+      min-height: 125px;
+      border: 1px solid #d6d6d6;
+      border-radius: 20px;
+      padding: 15px 15px 15px 25px;
     }
 
     .btnSubmit {
