--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1071,16 +1071,18 @@
 
 .mainContent {
   display: flex;
-  max-width: 1250px;
+  max-width: 1350px;
   margin-right: auto;
   margin-left: auto;
-  margin-top: 20px;
+  margin-top: 30px;
   justify-content: space-between;
 }
 .mainContent .containL {
   margin-left: 20px;
   width: 835px;
   margin-right: 50px;
+  border-bottom: 1px solid #d3d3d3;
+  margin-bottom: 40px;
 }
 .mainContent .containL h2 {
   font-family: GothamMedium;
@@ -1144,18 +1146,30 @@
   max-height: 875px;
   margin-right: 20px;
 }
-.mainContent .containR h4 {
+.mainContent .containR .titleGetInTouch {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
   border-bottom: 1px solid #d6d6d6;
-  font-size: 20px;
-  margin: 30px 0 0 0;
-  padding-left: 60px;
-  padding-bottom: 35px;
+  margin: 25px 0 0 0;
+  padding-left: 25px;
+  padding-bottom: 25px;
 }
-.mainContent .containR span {
+.mainContent .containR .letter {
+  display: inline-block;
+  background: url(../images/letter.JPG) no-repeat center/cover;
+  height: 40px;
+  width: 40px;
+}
+.mainContent .containR h4 {
+  font-size: 20px;
+  margin-left: 10px;
+}
+.mainContent .containR .lib {
   display: block;
-  margin-bottom: 25px;
   font-size: 12px;
   color: #8b8b8b;
+  margin-bottom: 15px;
 }
 .mainContent .containR form {
   padding: 30px;
@@ -1167,6 +1181,19 @@
   border-radius: 50px;
   height: 50px;
   margin-bottom: 15px;
+  color: black;
+  padding: 15px 15px 15px 25px;
+  font-size: 14px;
+  font-weight: normal;
+}
+.mainContent .containR textarea {
+  max-width: 100%;
+  min-width: 100%;
+  max-height: 125px;
+  min-height: 125px;
+  border: 1px solid #d6d6d6;
+  border-radius: 20px;
+  padding: 15px 15px 15px 25px;
 }
 .mainContent .containR .btnSubmit {
   text-align: center;
