--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1039,9 +1039,10 @@
 .mainHeaderPharma {
   height: 560px;
   background: url(../images/slides/woman-web_crop-min.jpg) no-repeat;
-  background-size: 175%;
+  background-size: cover;
   background-position: right 35% bottom 82%;
   filter: brightness(0.75);
+  border: 1px solid red;
 }
 .mainHeaderPharma .mainHeaderPharma_contain {
   display: block;
@@ -1141,6 +1142,7 @@
   text-decoration: underline;
 }
 .mainContent .containR {
+  position: relative;
   width: 420px;
   background-color: #f5f5f5;
   max-height: 875px;
@@ -1171,6 +1173,12 @@
   color: #8b8b8b;
   margin-bottom: 15px;
 }
+.mainContent .containR .sousTitre {
+  display: block;
+  font-size: 15px;
+  color: #5f5f5f;
+  margin-bottom: 15px;
+}
 .mainContent .containR form {
   padding: 30px;
 }
@@ -1185,6 +1193,16 @@
   padding: 15px 15px 15px 25px;
   font-size: 14px;
   font-weight: normal;
+  background-color: white;
+  outline: none;
+}
+.mainContent .containR .formInput:after {
+  content: "^";
+  float: right;
+}
+.mainContent .containR .combo1 {
+  cursor: pointer;
+  user-select: none;
 }
 .mainContent .containR textarea {
   max-width: 100%;
@@ -1194,6 +1212,7 @@
   border: 1px solid #d6d6d6;
   border-radius: 20px;
   padding: 15px 15px 15px 25px;
+  outline: none;
 }
 .mainContent .containR .btnSubmit {
   text-align: center;
@@ -1209,6 +1228,47 @@
 }
 .mainContent .containR .btnSubmit:hover {
   background-color: #7ac512;
+}
+
+.sousMenu1 {
+  display: inline-block;
+  position: absolute;
+  width: 86%;
+  border: 1px solid #d6d6d6;
+  border-radius: 20px;
+  height: 200px;
+  top: 495px;
+  color: black;
+  padding: 15px 15px 15px 20px;
+  font-size: 14px;
+  font-weight: normal;
+  background-color: white;
+  overflow-y: scroll;
+  visibility: visible;
+  /* width */
+  /* Track */
+  /* Handle */
+}
+.sousMenu1 .option {
+  width: 100%;
+  padding: 8px 5px 8px 5px;
+}
+.sousMenu1 .option:hover {
+  background-color: #e7e7e7;
+}
+.sousMenu1::-webkit-scrollbar {
+  width: 5px;
+}
+.sousMenu1::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+.sousMenu1::-webkit-scrollbar-thumb {
+  background: #8cdb1f;
+  border-radius: 10px;
+}
+
+.show {
+  visibility: visible;
 }
 
 /****************************************/
