--- a/public/css/style.css
+++ b/public/css/style.css
@@ -436,6 +436,95 @@
   margin-top: 2%;
 }
 
+.headerHamburger {
+  visibility: hidden;
+  height: 100px;
+  border-bottom: 1px solid #d6d8d8;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 5;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+}
+.headerHamburger .logoClinigenHamburger {
+  background: url(/public/images/clinigen-logo.png) no-repeat center/cover;
+  width: 150px;
+  height: 45px;
+  margin-left: 15px;
+}
+.headerHamburger .menuHamburger {
+  display: flex;
+  align-items: center;
+  margin-right: 25px;
+  font-family: GothamBold;
+  cursor: pointer;
+}
+.headerHamburger .menuHamburger .hamburger {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 25px;
+  height: 25px;
+  margin-right: 6px;
+}
+.headerHamburger .menuHamburger .hamburger span {
+  border-bottom: 2px solid #8cdb1f;
+  height: 2px;
+  width: 100%;
+  margin: 2px 0 2px 0;
+}
+.headerHamburger .menuHamburger .hamburger span:nth-child(3) {
+  width: 75%;
+}
+
+.sousMenuHamburgerCache {
+  position: fixed;
+  width: 300px;
+  height: 100vh;
+  background-color: white;
+  z-index: 7;
+  right: -300px;
+  transition: all 0.2s ease;
+  visibility: hidden;
+}
+.sousMenuHamburgerCache .fermer {
+  float: right;
+  margin: 25px 25px 0 0;
+  font-size: 20px;
+}
+
+.showMenuHamb {
+  right: 0px;
+  visibility: visible;
+}
+
+.darkerMain {
+  filter: brightness(75%);
+}
+
+@media all and (max-width: 1300px) {
+  #header_bot_menuMiddle a {
+    font-size: 12px;
+  }
+}
+@media all and (max-width: 1200px) {
+  .headerHamburger {
+    visibility: visible;
+  }
+
+  #header {
+    visibility: hidden;
+    display: none;
+  }
+
+  main {
+    position: relative;
+    top: -50px;
+  }
+}
 .footer {
   position: relative;
   background-color: #005052;
