--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,10 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;600&display=swap");
 @import url("https://use.typekit.net/mwf7moh.css");
+
 @import "./variables";
 @import "./shared/header";
 @import "./shared/footer";
 @import "./mission";
 @import "./pharmaceutical";
+@import "./healtcare";
 @import "./main";
 
 @font-face {
