--- a/public/css/_mission.scss
+++ b/public/css/_mission.scss
@@ -172,7 +172,7 @@
   .rightPatient_container {
     margin-left: auto;
     margin-right: auto;
-    height: 600px;
+    min-height: 600px;
     display: flex;
     justify-content: space-between;
     max-width: 1050px;
@@ -215,7 +215,7 @@
       }
     }
     .rightPatient_R {
-      width: 500px;
+      max-width: 500px;
       height: 100%;
       background-color: white;
       padding: 20px 40px 40px 40px;
@@ -224,16 +224,19 @@
       -moz-box-shadow: 0px -1px 30px -1px rgba(128, 128, 128, 0.349);
       margin-left: 50px;
       .listCards {
-        display: flex;
-        justify-content: space-between;
+        // display: flex;
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 50% 50%;
+        // justify-content: space-between;
         margin-top: 20px;
-        flex-wrap: wrap;
-
+        // flex-wrap: wrap;
+        width: 100%;
         .keyFacts_Card {
-          width: 45%;
+          //width: 45%;
+          width: 100%;
           height: 150px;
           margin: 10px;
-
           span {
             min-width: 200px;
             display: block;
